# devops

./: .env.example  README.md  docker-bake.hcl  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/api/: exception_handlers.py
backend/app/api/dependencies/: assignment.py  project.py  team_member.py  time_log.py
backend/app/api/dto/: assignment_dto.py  common_dto.py  project_dto.py  team_member_dto.py  time_log_dto.py
backend/app/api/routers/: assignment_router.py  project_router.py  team_member_router.py  time_log_router.py
backend/app/domain/entity/: assignment_entity.py  project_entity.py  team_member_entity.py  time_log_entity.py
backend/app/domain/exceptions/: base.py  business_rules.py  conflict.py  not_found.py
backend/app/domain/interfaces/: assignment_repository.py  project_repository.py  team_member_repository.py  time_log_repository.py
backend/app/domain/value_objects/: assignment_values.py  pagination.py  project_values.py  team_member_values.py
backend/app/infrastructure/: config.py  database.py
backend/app/infrastructure/mappers/: assignment_mapper.py  project_mapper.py  team_member_mapper.py  time_log_mapper.py
backend/app/infrastructure/models/: __init__.py  assignment_model.py  project_model.py  team_member_model.py  time_log_model.py
backend/app/infrastructure/repositories/: assignment_repository.py  project_repository.py  team_member_repository.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 7131439d0abc_initial_schema.py  78d4308e075a_add_filter_indexes.py
(+81 files in other folders)
